--- a/test/[Q101]Flex.html
+++ b/test/[Q101]Flex.html
@@ -24,15 +24,33 @@
 </head>
 
 <body>
-    <div class="main">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box" style="align-self: flex-start">3</div>
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-  
-    </div>
+
+    <script>
+        function a() {
+            this.a = 1;
+            b();
+        }
+
+        function b() {
+            this.b = 2;
+            debugger
+            console.log(this.a);
+            c()
+        }
+
+        const c = () => {
+            this.c = 3;
+            debugger
+            console.log(this.a);
+            console.log(this.b);
+        }
+
+        a();
+
+        console.log(`window this.a:${this.a}`)
+        console.log(`window this.b:${this.b}`)
+        console.log(`window this.c:${this.c}`)
+    </script>
 </body>
 
 </html>
